--- a/server/public/index.html
+++ b/server/public/index.html
@@ -12,13 +12,13 @@
 <body>
     <h1>Weekend SQL To Do List</h1>
     <div id="addListItem">
-        <label for="new task">New Task</label>
+        <label id="input-label" for="new task">New Task</label>
         <input type="text" id="add-task" placeholder="type new task here">
 
         <button id="submit">Submit</button>
     </div>
     <h2>Task List</h2>
-    <table>
+    <table id="tableWrapper">
         <thead>
             <tr>
                 <th>Task</th>
